--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.2, 8.3]
+         php: [8.2,8.3]
 
     name: PHP ${{ matrix.php }}
 
@@ -38,3 +38,26 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit
+
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Set up Docker
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker builder
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD_WRITE }}
+
+      - name: Docker build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_TAG }}
