--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,4 +60,5 @@ jobs:
         with:
           context: .
           push: true
+          file: ./Docker
           tags: ${{ secrets.DOCKERHUB_TAG }}
