--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     steps:
+      - name: Checkout Docker
+        uses: actions/checkout@v4
+
       - name: Set up Docker
         uses: docker/setup-qemu-action@v3
 
