--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,15 @@ jobs:
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
+      - name: SonarQube Quality Gate
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        timeout-minutes: 5
+        with:
+          scanMetadataReportFile: ./votrerépertoire/.scannerwork/report-task.txt
+        env:
+          SONAR_TOKEN: ${{ secrets.SONNAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONNAR_HOST_URL }}
+
   build-docker:
     runs-on: self-hosted
     needs: tests
