--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,8 +54,8 @@ jobs:
         with:
           scanMetadataReportFile: ./votrerépertoire/.scannerwork/report-task.txt
         env:
-          SONAR_TOKEN: ${{ secrets.SONNAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONNAR_HOST_URL }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   build-docker:
     runs-on: self-hosted
